--- a/index.html
+++ b/index.html
@@ -16,7 +16,41 @@
 
 
 <body>
-  
+  <!-- mobile overlay-->
+  <div id="overlay">
+    <div>
+      <i class="fa fa-times" title="close navigation button"></i>
+    </div>
+    <div class="overlay-text">
+      <a href="index.html">Home</a>
+      <a href="warhammer.html">Warhammer</a>
+      <a href="about.html">About</a>
+    </div>
+  </div>
+
+  <header>
+    <nav class="nav full-nav">
+      <div>
+        <img src="Images/headshot.png" alt="headshot" style="width: 25%;">
+      </div>
+      <div>
+        <a href="index.html">Home</a>
+        <a href="warhammer.html">Warhammer</a>
+        <a href="about.html">About</a>
+      </div>
+    </nav>
+
+    <!--Moble-->
+    <nav class="nav mobile-nav">
+      <div>
+        <img src="Images/headshot.png" alt="headshot" style="width: 25%;">
+      </div>
+      <div>
+        <i class="fa-solid fa-bars" title="Navigation button"></i>
+      </div>
+
+    </nav>
+  </header>
 </body>
 
 
