fixed image sizing

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <header>
     <nav class="nav full-nav">
       <div>
-        <img src="Images/headshot.png" alt="headshot" style="width: 25%;">
+        <img src="Images/headshot.png" alt="headshot" style="width: 50px;">
       </div>
       <div>
         <a href="index.html">Home</a>
@@ -45,7 +45,7 @@
     <!--Moble-->
     <nav class="nav mobile-nav">
       <div>
-        <img src="Images/headshot.png" alt="headshot" style="width: 25%;">
+        <img src="Images/headshot.png" alt="headshot" style="width: 10%;">
       </div>
       <div>
         <i class="fa-solid fa-bars" title="Navigation button"></i>
